<resources>

    <string name="add_app">Add Games</string>
    <string name="anti_aliasing">Anti-aliasing</string>
    <string name="app_name">GFX  TOOLS</string>
    <string name="apps_in_this_won_t_be_killed">Apps in this won’t be killed.</string>
    <string name="apps_in_this_won_t_be_blocked_notification">Apps in this won’t be blocked notification.</string>
    <string name="contacts_in_this_won_t_be_rejected">Contacts in this won’t be rejected.</string>
    <string name="automatic_boost_when_laggy">Automatic Boost When Playing Game</string>
    <string name="booster_settings_activity_tittle">Booster Settings</string>
    <string name="boosting_app">Boosting %s</string>
    <string name="choose_the_best_graphics_for_your_device">Choose the best graphics for your device</string>
    <string name="choose_your_favorite_color_filter">Choose your favorite color filter</string>
    <string name="chose_your_game_version">Chose your game version</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="title_load">GFX TOOLS</string>
    <string name="title_splash">The Ultimate Game Experience Booster</string>
    <string name="config_key_map">Automatic Boost</string>
    <string name="dashboard">Dashboard</string>
    <string name="disable_for_better_performance">Disable for better performance</string>
    <string name="enable_or_disable_shadows">Enable or disable shadows</string>
    <string name="enable_overlay">Allow</string>
    <string name="excellent">Excellent !!!</string>
    <string name="freed_up">Freed up %1$s</string>
    <string name="game_version">Game Version</string>
    <string name="get_cool_game_character_name">Get cool game nick name</string>
    <string name="gfx_tool">GFX Tool</string>
    <string name="givefeedback">Please select some stars and give your feedback</string>
    <string name="gpu_optimization">GPU Optimization</string>
    <string name="graphics">Graphics</string>
    <string name="light_effects">Light Effects</string>
    <string name="loading1">Loading...</string>
    <string name="makes_the_textures_smooth">Makes the textures smooth</string>
    <string name="network">NETWORK</string>
    <string name="network_speed">Network</string>
    <string name="network_speed_explain">Network latency is determined by the time of Ping to Google. This is not the true delay to any of your game server but indicates your network environment is good or not.</string>
    <string name="nickname_generator">Nickname Generator</string>
    <string name="not_good">Not good</string>
    <string name="notification_tip">Booster is running</string>
    <string name="overlay_permission_request">Need to allow Drawing over other apps permission</string>
    <string name="please_enable_usage_access">Permission denied, please allow \'Usage Stats\' permission in Settings App</string>
    <string name="pubg">PUBG</string>
    <string name="app_needs_usages_access">App needs usage access permission to get apps info and free up RAM.</string>
    <string name="permission_storage_message">Grant permission to clean your phone storage.</string>
    <string name="quit_ok">Quite ok</string>
    <string name="ram_boost">Ram Boost</string>
    <string name="rate_this_application">Rate this application</string>
    <string name="reduce_useless_effects">Reduce useless effects</string>
    <string name="rendering_quality">Rendering Quality</string>
    <string name="resolution">Resolution</string>
    <string name="set_graghics">Set Graphics, Resolution, FPS ...</string>
    <string name="set_graghics_advanced"><![CDATA[ Crosshair & Advanced Set Graphics, Resolution, FPS..…]]></string>
    <string name="save_controls">Save Controls</string>
    <string name="save_your_settings_like_sensitivity_etc">Save your settings, like sensitivity, etc</string>
    <string name="set_optimal_resolution_for_the_game">Set optimal resolution for the game</string>
    <string name="shaders_textures_etc">Shaders, textures etc</string>
    <string name="shadows">Shadows</string>
    <string name="special_character">Nick name Generator</string>
    <string name="styles">Styles</string>
    <string name="tap_game_boost">Tap a game to boost</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="type_your_name_here">Type your name here</string>
    <string name="unlock_maximum_fps_limit">Unlock maximum FPS limit</string>
    <string name="usagestats_granted">Usages Stats permission is allowed</string>
    <string name="usagestats_permission_request">Need to allow the Usage Stats permission</string>
    <string name="very_bad">Very Bad</string>
    <string name="very_good">Very Good</string>
    <string name="killed_automatically">While your game is running and some other app may launch and affect the performance, then they’ll be killed automatically.</string>
    <string name="blocked_automatically">While your game is running and some other app may post notification and affect the performance, then they’ll be blocked.</string>
    <string name="reject_calls_automatically">While your game is running, incoming calls will be rejected.</string>
    <string name="white_comment">Please write your comment here ...</string>
    <string name="white_list">White List</string>
    <string name="action_review">Review</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="permission_allow">Allow</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="unknown">Unknown</string>
    <string name="add">Add</string>
    <string name="game_list">Game List</string>
    <string name="no_items_found">No items found</string>
    <string name="game_boosting">Game boosting…</string>
    <string name="no_ui">No UI found</string>
    <string name="remove_game">Remove Game</string>
    <string name="add_new_game">ADD NEW GAME</string>
    <string name="title_add_game">Click here to add new games or applications</string>
    <string name="gfx_tools_advanced">GFX TOOLS Advanced</string>
    <string name="done">Done..!</string>
    <string name="accept">Apply Settings</string>
    <string name="accept_run">Apply Settings New...</string>
    <string name="alert_content">Turn on the screen overlay from Settings &gt; Apps</string>
    <string name="ask_again">Ask again</string>
    <string name="cancel">Cancel</string>
    <string name="choose_color">Choose color</string>
    <string name="color">Color</string>
    <string name="crosshair">Crosshair type</string>
    <string name="denied_title">Permissions</string>
    <string name="dismiss">Dismiss</string>
    <string name="exit">Close</string>
    <string name="gameversion">Select version</string>
    <string name="gcm_defaultSenderId">738618166035</string>
    <string name="notification_content">Tap to show/hide the crosshair</string>
    <string name="notification_title">Crosshair FPS is running</string>
    <string name="ok">OK</string>
    <string name="opacity">Opacity</string>
    <string name="open_file_manager">OPEN FILE MANAGER</string>
    <string name="perm_storage">Graphics Tool needs storage access to change game data.</string>
    <string name="perm_toast">Required permissions were denied, enable them from Settings app to use app</string>
    <string name="perm_unknown">Permission error, check permission status in Settings app.</string>
    <string name="position">Position</string>
    <string name="reset_x">Reset X</string>
    <string name="reset_y">Reset Y</string>
    <string name="run_game">RUN GAME</string>
    <string name="size">Size</string>
    <string name="start">Show Crosshair</string>
    <string name="steps">Steps</string>
    <string name="stop">Hide Crosshair</string>
    <string name="tab_text_1">GFX</string>
    <string name="tab_text_2">CROSSHAIR</string>
    <string name="tab_text_3">HELP</string>
    <string name="up">Up</string>
    <string name="down">down</string>
    <string name="left">left</string>
    <string name="right">right</string>

    <string name="id_admob">ca-app-pub-6737337717888276~4766382652</string>
    <string name="ads_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ads_instritial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ads_native">ca-app-pub-3940256099942544/2247696110</string>
    <string name="vip_gfx">VIP FEATURES</string>
    <string name="wanna_quit">Wanna Quit ?</string>
    <string name="no_stay">No, Stay</string>
    <string name="yes_quit">Yes, Quit</string>
    <string name="clear_background_whitelist">Clear background app whitelist</string>
    <string name="reject_calls_whitelist">Reject calls whitelist</string>
    <string name="reject_calls_whitelist_title">Auto Reject Calls</string>
    <string name="notification_blocking_whitelist">Notification Blocking whitelist</string>
    <string name="notification_blocking_whitelist_title">Notification Blocking</string>
    <string name="hide_truecaller">Hide TrueCaller Dialog</string>
    <string name="game_mode_title">Game Mode Settings</string>
    <string name="using_wifi">Using Wifi</string>
    <string name="disable_auto_switch_wifi">Disable auto switch wifi</string>
    <string name="disable_auto_brightness">Disable auto brightness</string>
    <string name="brightness_value">Brightness</string>
    <string name="change_ringtone_volume">Change Ringtone Volume</string>
    <string name="ringtone_volume_value">Ringtone Volume</string>
    <string name="change_media_volume">Change Media Volume</string>
    <string name="media_volume_value">Media Volume</string>
    <string name="setting_value">%s%%</string>
    <string name="trueCaller_msg">Open Truecaller app -&gt; Navigate to Settings from Side Drawer -&gt; Select Caller ID -&gt; Uncheck  \"Show after call details\".</string>
    <string name="notify_access">notify_access</string>
    <string name="choosen_app">Choosen App</string>
    <string name="auto_reject">Auto Reject Calls</string>
    <string name="selected_app">selected_app</string>
    <string name="normal_mode">Normal Mode</string>
    <string name="game_mode">Game Mode</string>
    <string name="silent_mode">Silent Mode</string>
    <string name="clear_junk_noti">Clear junk notifications</string>
    <string name="boost">Boost</string>
</resources>
