<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_ask_permission"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/permission_needed"
        android:textColor="#424a60"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:text="@string/app_needs_usages_access"
        android:textColor="@color/text_color_gery"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnAllow"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="6dp"
        android:layout_weight="1"
        android:background="@drawable/btn_main_boost"
        android:text="@string/permission_allow"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size15" />
</LinearLayout>
