<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="5">

    <LinearLayout
        android:id="@+id/ll_normal_mode"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp"
        tools:background="@color/active_mode">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_normal_mode" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/normal_mode"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_game_mode"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp"
        tools:background="@color/inactive_mode">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_game_mode" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/game_mode"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_silent_mode"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/inactive_mode"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_silent_mode" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/silent_mode"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_boost"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/feature_bg"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_boost" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/boost"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_clear_junk_noti"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/feature_bg"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_clear_junk_noti" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/clear_junk_noti"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>