<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_color"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_color_sub"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">
        <include
            layout="@layout/toolbar"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/base_color_sub"
            app:tabGravity="fill"
            app:tabMode="fixed"
            app:tabIndicatorColor="@color/colorAccent3"
            app:tabSelectedTextColor="@color/colorAccent3"
            >

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/tab_text_1" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/tab_text_2" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/tab_text_3" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/banner"
        layout="@layout/control_banner_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/bg_screen_padding_8"
        android:layout_marginTop="5dp"
        android:layout_marginRight="@dimen/bg_screen_padding_8"/>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</LinearLayout>
