<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="20.0dip">


     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/line_width"
                android:layout_height="@dimen/line_height"
                android:src="@drawable/bg_line"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="Experimental"
                android:textAllCaps="true"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size15"
                android:fontFamily="@font/helvetica_light"/>
        </LinearLayout>

           <include
            layout="@layout/vip_gfx_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/line_width"
                android:layout_height="@dimen/line_height"
                android:src="@drawable/bg_line"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/gfx_tool"
                android:textAllCaps="true"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size15"
                android:fontFamily="@font/helvetica_light"/>
        </LinearLayout>



        <include
            layout="@layout/gfx_app_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/line_width"
                android:layout_height="@dimen/line_width"
                android:src="@drawable/ic_gfx_pro"
                android:layout_gravity="center"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/gfx_tools_advanced"
                android:textAllCaps="true"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size15"
                android:fontFamily="@font/helvetica_light"/>
        </LinearLayout>



        <include
            layout="@layout/gfx_app_advanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/line_width"
                android:layout_height="@dimen/line_height"
                android:src="@drawable/bg_line"
                android:layout_gravity="center"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/special_character"
                android:textAllCaps="true"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size15"
                android:fontFamily="@font/helvetica_light" />

        </LinearLayout>

        <include
            layout="@layout/special_character_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

    </LinearLayout>


</LinearLayout>